Confirmation activity xml changed

--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -19,33 +19,14 @@
         android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/logo_to_first_element_margin"
+        android:layout_marginTop="124dp"
         android:gravity="start"
-        android:text="Please Check your Email"
+        android:text="Please check your email and click the link"
         android:textColor="#000000"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/editText1"
-        app:layout_constraintStart_toStartOf="@id/editText1"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:background="@drawable/signup_rectangle"
-        android:inputType="text|textNoSuggestions"
-        android:hint="wait... i guess... lol"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="@dimen/between_elements_spacing" />
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        tools:layout_editor_absoluteX="42dp" />
 
     <Button
         android:id="@+id/resendCode"
@@ -58,7 +39,7 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499"
@@ -75,10 +56,10 @@
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.901"
+        app:layout_constraintVertical_bias="0.617"
         app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
