--- a/MyApplication/app/src/main/res/layout/item.xml
+++ b/MyApplication/app/src/main/res/layout/item.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/infoButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="More Info" />
 
         </LinearLayout>
 
