--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -25,6 +25,8 @@
         android:textColor="#000000"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/resendCode"
+        app:layout_constraintEnd_toEndOf="@id/resendCode"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         tools:layout_editor_absoluteX="42dp" />
 
@@ -34,7 +36,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_rectangle"
         android:minHeight="48dp"
-        android:text="Resend Email"
+        android:text="Send Email"
         android:textColor="#ffffff"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
